// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tests > "\\n// pre comment\\nif (a)\\n\\t// inner comment\\n\\tb;\\n// post comment\\n" 1`] = `
"
------------------------------------ Input -------------------------------------

// pre comment
if (a)
	// inner comment
	b;
// post comment

------------------------------------ Output ------------------------------------
// pre comment
if (a) {
  // inner comment
  b;
}
// post comment
"
`;

exports[`Tests > "\\n// prettier-ignore\\nfunction ignored() {\\n    if(foo  .bar)\\n        return\\n}\\n" 1`] = `
"
------------------------------------ Input -------------------------------------

// prettier-ignore
function ignored() {
    if(foo  .bar)
        return
}

------------------------------------ Output ------------------------------------
// prettier-ignore
function ignored() {
    if(foo  .bar)
        return
}
"
`;

exports[`Tests > "\\nconst p = 'test';\\n\\n\\n//pre comment\\n//this is another pre comment\\nif (a) b;\\n//post comment\\n\\nsomeOtherCode();\\n" 1`] = `
"
------------------------------------ Input -------------------------------------

const p = 'test';


//pre comment
//this is another pre comment
if (a) b;
//post comment

someOtherCode();

------------------------------------ Output ------------------------------------
const p = "test";

//pre comment
//this is another pre comment
if (a) {
  b;
}
//post comment

someOtherCode();
"
`;

exports[`Tests > "\\ndo /* a */\\nb; while (c)\\n" 1`] = `
"
------------------------------------ Input -------------------------------------

do /* a */
b; while (c)

------------------------------------ Output ------------------------------------
do {
  /* a */
  b;
} while (c);
"
`;

exports[`Tests > "\\ndo //a\\nb; while (c)\\n" 1`] = `
"
------------------------------------ Input -------------------------------------

do //a
b; while (c)

------------------------------------ Output ------------------------------------
do {
  //a
  b;
} while (c);
"
`;

exports[`Tests > "\\ndo\\n/* a */\\nb; while (c)\\n" 1`] = `
"
------------------------------------ Input -------------------------------------

do
/* a */
b; while (c)

------------------------------------ Output ------------------------------------
do {
  /* a */
  b;
} while (c);
"
`;

exports[`Tests > "\\ndo\\n//a\\nb; while (c)\\n" 1`] = `
"
------------------------------------ Input -------------------------------------

do
//a
b; while (c)

------------------------------------ Output ------------------------------------
do {
  //a
  b;
} while (c);
"
`;

exports[`Tests > "\\nif (!'+-×*/÷'.includes(ch))\\n  continue;\\n" 1`] = `
"
------------------------------------ Input -------------------------------------

if (!'+-×*/÷'.includes(ch))
  continue;

------------------------------------ Output ------------------------------------
if (!"+-×*/÷".includes(ch)) {
  continue;
}
"
`;

exports[`Tests > "\\nif (a) b;\\n_ = {\\n\\ta: [\\n\\t\\t\\"b\\",\\n\\t],\\n\\tc: \\"d\\"\\n};\\n" 1`] = `
"
------------------------------------ Input -------------------------------------

if (a) b;
_ = {
	a: [
		"b",
	],
	c: "d"
};

------------------------------------ Output ------------------------------------
if (a) {
  b;
}
_ = {
  a: ["b"],
  c: "d",
};
"
`;

exports[`Tests > "\\nif(a) //b\\nc\\n" 1`] = `
"
------------------------------------ Input -------------------------------------

if(a) //b
c

------------------------------------ Output ------------------------------------
if (a) {
  //b
  c;
}
"
`;

exports[`Tests > "\\nif(a)\\n//b\\nc\\n" 1`] = `
"
------------------------------------ Input -------------------------------------

if(a)
//b
c

------------------------------------ Output ------------------------------------
if (a) {
  //b
  c;
}
"
`;

exports[`Tests > "\\nwhile (a) // b\\n<c> d;\\n" 1`] = `
"
------------------------------------ Input -------------------------------------

while (a) // b
<c> d;

------------------------------------ Output ------------------------------------
while (a) {
  // b
  <c>d;
}
"
`;

exports[`Tests > "await 1;" 1`] = `
"
------------------------------------ Input -------------------------------------
await 1;

------------------------------------ Output ------------------------------------
await 1;
"
`;

exports[`Tests > "do { a; } while (b);" 1`] = `
"
------------------------------------ Input -------------------------------------
do { a; } while (b);

------------------------------------ Output ------------------------------------
do {
  a;
} while (b);
"
`;

exports[`Tests > "do a; while (b);" 1`] = `
"
------------------------------------ Input -------------------------------------
do a; while (b);

------------------------------------ Output ------------------------------------
do {
  a;
} while (b);
"
`;

exports[`Tests > "export { foo };" 1`] = `
"
------------------------------------ Input -------------------------------------
export { foo };

------------------------------------ Output ------------------------------------
export { foo };
"
`;

exports[`Tests > "foo; import a from 'bar'" 1`] = `
"
------------------------------------ Input -------------------------------------
foo; import a from 'bar'

------------------------------------ Output ------------------------------------
foo;
import a from "bar";
"
`;

exports[`Tests > "for (; ; ) ;" 1`] = `
"
------------------------------------ Input -------------------------------------
for (; ; ) ;

------------------------------------ Output ------------------------------------
for (;;);
"
`;

exports[`Tests > "for (; ; ) { d; }" 1`] = `
"
------------------------------------ Input -------------------------------------
for (; ; ) { d; }

------------------------------------ Output ------------------------------------
for (;;) {
  d;
}
"
`;

exports[`Tests > "for (; ; ) d;" 1`] = `
"
------------------------------------ Input -------------------------------------
for (; ; ) d;

------------------------------------ Output ------------------------------------
for (;;) {
  d;
}
"
`;

exports[`Tests > "for (a; b; c) { d; }" 1`] = `
"
------------------------------------ Input -------------------------------------
for (a; b; c) { d; }

------------------------------------ Output ------------------------------------
for (a; b; c) {
  d;
}
"
`;

exports[`Tests > "for (a; b; c) d;" 1`] = `
"
------------------------------------ Input -------------------------------------
for (a; b; c) d;

------------------------------------ Output ------------------------------------
for (a; b; c) {
  d;
}
"
`;

exports[`Tests > "for (const a in b) { c; }" 1`] = `
"
------------------------------------ Input -------------------------------------
for (const a in b) { c; }

------------------------------------ Output ------------------------------------
for (const a in b) {
  c;
}
"
`;

exports[`Tests > "for (const a in b) c;" 1`] = `
"
------------------------------------ Input -------------------------------------
for (const a in b) c;

------------------------------------ Output ------------------------------------
for (const a in b) {
  c;
}
"
`;

exports[`Tests > "for (const a of b) { c; }" 1`] = `
"
------------------------------------ Input -------------------------------------
for (const a of b) { c; }

------------------------------------ Output ------------------------------------
for (const a of b) {
  c;
}
"
`;

exports[`Tests > "for (const a of b) c;" 1`] = `
"
------------------------------------ Input -------------------------------------
for (const a of b) c;

------------------------------------ Output ------------------------------------
for (const a of b) {
  c;
}
"
`;

exports[`Tests > "if (a) { b; }" 1`] = `
"
------------------------------------ Input -------------------------------------
if (a) { b; }

------------------------------------ Output ------------------------------------
if (a) {
  b;
}
"
`;

exports[`Tests > "if (a) { if (b) c; }" 1`] = `
"
------------------------------------ Input -------------------------------------
if (a) { if (b) c; }

------------------------------------ Output ------------------------------------
if (a) {
  if (b) {
    c;
  }
}
"
`;

exports[`Tests > "if (a) {} else b;" 1`] = `
"
------------------------------------ Input -------------------------------------
if (a) {} else b;

------------------------------------ Output ------------------------------------
if (a) {
} else {
  b;
}
"
`;

exports[`Tests > "if (a) b; else { c; }" 1`] = `
"
------------------------------------ Input -------------------------------------
if (a) b; else { c; }

------------------------------------ Output ------------------------------------
if (a) {
  b;
} else {
  c;
}
"
`;

exports[`Tests > "if (a) b; else c;" 1`] = `
"
------------------------------------ Input -------------------------------------
if (a) b; else c;

------------------------------------ Output ------------------------------------
if (a) {
  b;
} else {
  c;
}
"
`;

exports[`Tests > "if (a) b; else if (b) c;" 1`] = `
"
------------------------------------ Input -------------------------------------
if (a) b; else if (b) c;

------------------------------------ Output ------------------------------------
if (a) {
  b;
} else if (b) {
  c;
}
"
`;

exports[`Tests > "if (a) b;" 1`] = `
"
------------------------------------ Input -------------------------------------
if (a) b;

------------------------------------ Output ------------------------------------
if (a) {
  b;
}
"
`;

exports[`Tests > "if (a) if (b) {} else if (c) d;" 1`] = `
"
------------------------------------ Input -------------------------------------
if (a) if (b) {} else if (c) d;

------------------------------------ Output ------------------------------------
if (a) {
  if (b) {
  } else if (c) {
    d;
  }
}
"
`;

exports[`Tests > "if (a) if (b) c;" 1`] = `
"
------------------------------------ Input -------------------------------------
if (a) if (b) c;

------------------------------------ Output ------------------------------------
if (a) {
  if (b) {
    c;
  }
}
"
`;

exports[`Tests > "if (a) if (b) if (c) d;" 1`] = `
"
------------------------------------ Input -------------------------------------
if (a) if (b) if (c) d;

------------------------------------ Output ------------------------------------
if (a) {
  if (b) {
    if (c) {
      d;
    }
  }
}
"
`;

exports[`Tests > "let a; let a;" 1`] = `
"
------------------------------------ Input -------------------------------------
let a; let a;

------------------------------------ Output ------------------------------------
let a;
let a;
"
`;

exports[`Tests > "new.target;" 1`] = `
"
------------------------------------ Input -------------------------------------
new.target;

------------------------------------ Output ------------------------------------
new.target;
"
`;

exports[`Tests > "return;" 1`] = `
"
------------------------------------ Input -------------------------------------
return;

------------------------------------ Output ------------------------------------
return;
"
`;

exports[`Tests > "while (a) ;" 1`] = `
"
------------------------------------ Input -------------------------------------
while (a) ;

------------------------------------ Output ------------------------------------
while (a);
"
`;

exports[`Tests > "while (a) <b />;" 1`] = `
"
------------------------------------ Input -------------------------------------
while (a) <b />;

------------------------------------ Output ------------------------------------
while (a) {
  <b />;
}
"
`;

exports[`Tests > "while (a) <b />;" 2`] = `
"
------------------------------------ Input -------------------------------------
while (a) <b />;

------------------------------------ Output ------------------------------------
while (a) {
  <b />;
}
"
`;

exports[`Tests > "while (a) <b>c;" 1`] = `
"
------------------------------------ Input -------------------------------------
while (a) <b>c;

------------------------------------ Output ------------------------------------
while (a) {
  <b>c;
}
"
`;

exports[`Tests > "while (a) { b; }" 1`] = `
"
------------------------------------ Input -------------------------------------
while (a) { b; }

------------------------------------ Output ------------------------------------
while (a) {
  b;
}
"
`;

exports[`Tests > "while (a) b;" 1`] = `
"
------------------------------------ Input -------------------------------------
while (a) b;

------------------------------------ Output ------------------------------------
while (a) {
  b;
}
"
`;
